--- a/teste.html
+++ b/teste.html
@@ -1,21 +1,22 @@
-<!-- public/tiny-mce.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TinyMCE Editor</title>
-    <script src="node_modules/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
-  <script>
-    tinymce.init({
-      selector: 'textarea',
-      plugins: 'advlist autolink lists link image charmap print preview anchor',
-      toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help'
-    });
-    console.log(tinymce.get("textarea"))
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog Post</title>
 </head>
 <body>
-  <textarea></textarea>
+    <ul>
+        <li>javascript</li>
+        <li>python</li>
+        <li>csharp</li>
+    </ul>
+    <form>
+        <input type="text">
+        <button>
+            a
+        </button>
+    </form>
+    <script src="teste.js"></script>
 </body>
 </html>
