--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>SUCESSO</h1>
+    <script>
+        document.querySelector("h1").addEventListener('click',function() {
+            document.body.style.background = 'red';
+        });
+    </script>
 </body>
 </html>
